Update Profile Tab : Added Socials of Team Members(for now)

--- a/index.html
+++ b/index.html
@@ -416,7 +416,14 @@
     <section id="profile" style="display:none">
       <h2>Profile</h2>
       <p>Name: Tanishq Mehta</p>
-      <p>Email: tm@gmail.com</p>
+      <p>Occupation : Student</p>
+      <p>Email: tanishqmehta08@gmail.com</p>
+      <p>Socials : <a href="https://github.com/gt228-tan" style="color: rgb(141, 151, 255); text-decoration: none;">GitHub </a> | <a href="https://www.linkedin.com/in/tanishq-mehta-51055127b/" style="color: rgb(141, 151, 255); text-decoration: none;">LinkedIn</a></p>
+      <p>------------------------------</p>
+      <p>Name: Dhairya Shah</p>
+      <p>Occupation : Student</p>
+      <p>Email: dhairya.shah13@gmail.com</p>
+      <p>Socials : <a href="https://github.com/dhairya-shah13" style="color: rgb(141, 151, 255); text-decoration: none;">GitHub </a> | <a href="https://www.linkedin.com/in/dhairya-shah-42703a319/" style="color: rgb(141, 151, 255); text-decoration: none;">LinkedIn</a></p>
     </section>
 
   </main>
